<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".Design3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/logout"
            style="@style/TextView_1"
            android:text="@string/Logout" />

        <ImageView
            style="@style/TextView_1"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_more_horiz_24" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/redonwhite" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tamanna"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_camera_alt_24" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/first">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Assigned"
                android:text="@string/Assigned"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assigned"
                style="@style/numbers" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/second"
            android:layout_margin="10dp"
            android:layout_weight="0.3">
            <TextView
                style="@style/Assigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Received"
                style="@style/numbers" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Assigned"
                android:text="@string/completed"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Completed"
                style="@style/numbers" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextView_Heading"
        android:layout_marginStart="10dp"
        android:text="@string/text_heading"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:layout_margin="10dp"
        android:weightSum="1">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#3EB2DB"
            app:cardCornerRadius="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_photo_24" />

            <TextView
                style="@style/card_view"
                android:text="@string/card"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginTop="110dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.8"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/linear_text"
                        android:text="@string/linear_text"/>

                    <TextView
                        style="@style/linear_text"
                        android:text="@string/linear_text1"/>


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_baseline_arrow_forward_24" />


            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#FFB35C"
            app:cardCornerRadius="10dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/camera"
                android:backgroundTint="@color/white"
                style="@style/float_btn_2"
                android:src="@drawable/ic_baseline_camera_alt_24" />

            <TextView
                style="@style/card_view"
                android:text="@string/card_details"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="110dp"
                android:weightSum="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.8"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/linear_text"
                        android:text="@string/linear_text2"/>

                    <TextView
                        style="@style/linear_text"
                        android:layout_width="60dp"
                        android:text="@string/linear_text3" />


                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.2"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_arrow_forward_24"/>



            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <TextView
        style="@style/TextView_Thank"
        android:text="@string/next"/>

</LinearLayout>
