<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    tools:context=".Design2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:src="@drawable/capture1"
                android:layout_marginBottom="100dp" />

            <TextView
                style="@style/TextVw"
                android:text="@string/hey" />

            <TextView
                style="@style/TextVw"
                android:text="@string/login_now"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextVw1"
                    android:hint="@string/textview"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/createnew"
                    android:onClick="createnew"
                    style="@style/TextVw3"
                    android:text="@string/create_new" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <!--            styles-->
                            <EditText
                                android:id="@+id/name"
                                style="@style/Tamannatxtvw"
                                android:maxLines="1"
                                android:background="@drawable/mylayout"
                                android:hint="@string/enter_name" />


                            <ImageView
                                style="@style/ImageView"
                                android:background="@drawable/circle"
                                android:src="@drawable/ic_baseline_currency_franc_24" />

                        </androidx.cardview.widget.CardView>
                    </FrameLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="15dp">

                        <EditText
                            android:id="@+id/pwd"
                            style="@style/Password"
                            android:maxLength="6"
                            android:inputType="textPassword"
                            android:hint="@string/Password"
                            android:background="@drawable/corner_radius" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextVw1"
                            android:hint="@string/forget_password"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextVw3"
                            android:text="@string/reset" />
                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/Btn"
                    android:id="@+id/login"
                    android:background="@drawable/radius1"
                    app:backgroundTint="#DD8C0E21"
                    android:text="@string/login"/>

                <TextView
                    style="@style/Password"
                    android:hint="@string/skip_now"
                    android:gravity="center" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>